--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@4400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
@@ -62,151 +63,13 @@
     </section>
 
 
-    <!--section2-->
-    <section class="projects-container" id="portfolio">
-        <div class="project-card">
-            <div class="image" id="image">
-                <img src="./images/tonic.svg" alt="Image1" />
-            </div>
-            <div class="background">
-                <h2 class="p-title">Tonic</h2>
-                <ul class="subwork">
-                    <li class="work1">CANOPY</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="bullet" />
-                    </li>
-                    <li>Back End Dev</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="bullet" />
-                    </li>
-                    <li>2015</li>
-                </ul>
-                <p class="about">
-                    A daily selection of privately personalized reads; no accounts or
-                    sign-ups required.
-                </p>
-                <ul class="languages">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
-                <div><button class="clickme" type="button">See Projects</button></div>
+    <!--Cards container-->
+    <section class="cards-container">
 
-            </div>
-        </div>
     </section>
 
 
-    <!--section3-->
-    <section class=" projects-container project-card row-rev">
-        <div class="image">
-            <img src="./images/portfolio2.png" alt="Image2" />
-        </div>
-
-        <div class="background">
-            <h2 class="p-title">
-                Multi-post <br />
-                stories
-            </h2>
-            <ul class="subwork">
-                <li class="work1">CANOPY</li>
-                <li>
-                    <img src="./images/Counter.svg" alt="" />
-                </li>
-                <li>Back End Dev</li>
-                <li>
-                    <img src="./images/Counter.svg" alt="" />
-                </li>
-                <li>2015</li>
-            </ul>
-
-
-            <p class="about">
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required.
-            </p>
-
-            <ul class="languages">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-            </ul>
-            <div><button class="clickme" type="button">See Projects</button></div>
-        </div>
-    </section>
-
-
-    <!--section4-->
-    <section class="projects-container project-card">
-        <div class="image">
-            <img src="./images/portfolio3.png" alt="Image3" />
-        </div>
-        <div class="background">
-            <h2 class="p-title">Tonic</h2>
-            <ul class="subwork">
-                <li class="work1">CANOPY</li>
-                <li>
-                    <img src="./images/Counter.svg" alt="" />
-                </li>
-                <li>Back End Dev</li>
-                <li>
-                    <img src="./images/Counter.svg" alt="" />
-                </li>
-                <li>2015</li>
-            </ul>
-
-            <p class="about">
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required.
-            </p>
-
-            <ul class="languages">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-            </ul>
-            <div><button class="clickme" type="button">See Projects</button></div>
-        </div>
-    </section>
-
-
-
-    <!--section5-->
-    <section class=" projects-container project-card row-rev">
-        <div class="image">
-            <img src="./images/portfolio4.png" alt="Image3" />
-        </div>
-
-        <div class="background">
-            <h2 class="p-title">
-                Multi-post <br />
-                stories
-            </h2>
-            <ul class="subwork">
-                <li class="work1">CANOPY</li>
-                <li>
-                    <img src="./images/Counter.svg" alt="" />
-                </li>
-                <li>Back End Dev</li>
-                <li>
-                    <img src="./images/Counter.svg" alt="" />
-                </li>
-                <li>2015</li>
-            </ul>
-
-            <p class="about">
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required.
-            </p>
-
-            <ul class="languages">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-            </ul>
-            <div><button class="clickme" type="button">See Project</button></div>
-        </div>
-    </section>
+    <!-- About section -->
     <section class="my-intro" id="about">
         <div class="about-me">
             <h3 class="self">
@@ -317,48 +180,6 @@
                 <img src="./images/shape.png" alt="line" />
             </div>
         </form>
-    </section>
-    <!--section Popup-->
-
-    <section class="popup-window">
-        <div class="project-card">
-            <div class="background">
-                <h2 class="p-title">Tonic</h2>
-                <div class="close"><img src="./images/xicon.png" alt=""></div>
-                <ul class="subwork">
-                    <li class="work1">CANOPY</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="bullet" />
-                    </li>
-                    <li>Back End Dev</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="bullet" />
-                    </li>
-                    <li>2015</li>
-                </ul>
-                <div class="image" id="image">
-                    <img src="./images/tonic.svg" alt="Image1" />
-                </div>
-                <p class="about">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standarddummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book. It has survived not only five centuries, but also the leap into
-                    electronic typesetting, remaining essent
-                </p>
-                <ul class="languages">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
-                <div>
-                    <button class="clickme" type="button">See live <img src="./images/livecode.png"
-                            alt="blue GitHub icon"></button>
-                    <button class="clickme" type="button">See code <img src="./images/bluegithub.png"
-                            alt="live code view icon"></button>
-                </div>
-            </div>
-        </div>
     </section>
     <script src="./menu.js"></script>
 </body>
